# monstereos

./: .gitignore  .travis.yml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  asset-manifest.json  cleos.sh  docker-compose.yml  flush.sh  index.html  manifest.json  netlify.toml  package-lock.json  package.json  service-worker.js  setup-chain.sh  setup.sh  start.sh  stop.sh  ui-build.sh  utils.http  webpack-assets.json
services/eos-dev/contracts/: .clang-format  .gitignore  CMakeLists.txt  build.sh  newCMakeLists.txt  old-CMakeLists.txt  test-all.sh
services/eos-dev/contracts/market/: market.abi  market.claimpet_rc.md  market.cpp  market.hpp  market.removebid_rc.md
services/eos-dev/contracts/market/lib/: types.hpp
services/eos-dev/contracts/market/rc/: market.bidpet_rc.md  market.offerpet_rc.md  market.removeoffer_rc.md  market_rc.md
services/eos-dev/contracts/monstereosio/: CMakeLists.txt  monstereosio.abi  monstereosio.wasm
services/eos-dev/contracts/monstereosio/rc/: pet.awakepet_rc.md  pet.battleattack_rc.md  pet.battlecreate_rc.md  pet.battlejoin_rc.md  pet.battleleave_rc.md  pet.battlestart_rc.md  pet.bedpet_rc.md  pet.changecrtol_rc.md  pet_rc.md  (+7 more)
services/eos-dev/contracts/pet/: pet.abi  pet.changecrfee_rc.md  pet.cpp  pet.destroypet_rc.md  pet.hpp  pet.transfer_rc.md  petabi.cpp  petcode.cpp
services/eos-dev/contracts/scripts/: 0000_init_chain.sh  0010_load-elements.sh  0020_load-pet-types.sh
services/eos-dev/contracts/tests/: CMakeLists.txt  contracts.hpp.in  eosio.system_tester.hpp  eosio.system_tests.cpp  monstereosio_tests.cpp
(+346 files in other folders)
